# game-of-life-cluster

./: Cargo.toml  README.md  RESOURCES.txt  archive_listings.txt  doc.sh
src/: cli.rs  logger.rs  main.rs  program.cl
src/gpu/: mod.rs
src/master/: connection.rs  handler.rs  mod.rs  server.rs  state.rs  utils.rs
src/slave/: mod.rs
src/threaded/: mod.rs  world.rs
src/utils/: result.rs
