[package]
name        = "game-of-life-cluster"
version     = "0.1.0"
authors     = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "[EXPERIMENTAL] Game of Life simulator for clusters of computers"
license     = "MIT"
repository  = "https://github.com/dmitmel/game-of-life-cluster.git"
homepage    = "https://github.com/dmitmel/game-of-life-cluster"
readme      = "README.md"

[dependencies]
clap = "2.32.0"
rand = "0.5.3"
ocl  = "0.18.0"
